# envpod-oss

./: .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  about.toml  build-release.sh  install-container.sh  install-host.sh  install.sh  uninstall.sh
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pages.yml  release.yml
TODO/: DOCKER-TESTING.md  Dockerfile  INSTALL.md  install.sh  test-distros.sh
cli/: Cargo.toml
cli/src/: main.rs  presets.rs  wizard.rs
cli/src/dashboard/: api.rs  mod.rs  state.rs
cli/src/dashboard/static/: index.html  pod.html  style.css
core/: Cargo.toml
core/src/: action_types.rs  actions.rs  app_resolver.rs  audit.rs  config.rs  error.rs  lib.rs  monitor.rs  queue.rs  queue_socket.rs  remote.rs  snapshot.rs  store.rs  types.rs  undo.rs  user_clone.rs  vault.rs  web_display.rs
core/src/backend/: mod.rs
core/src/backend/native/: cgroup.rs  dev_mask.rs  gc.rs  mod.rs  namespace.rs  netns.rs  overlay.rs  proc_mask.rs  seccomp.rs  state.rs
core/src/dns_daemon/: mod.rs
dns/: Cargo.toml
dns/src/: audit.rs  daemon_client.rs  lib.rs  resolver.rs  server.rs
docker/: entrypoint.sh
docs/: ACTION-CATALOG.md  BENCHMARKS.md  CAPABILITIES.md  CE-VS-PREMIUM.md  CLI-BLACKBOOK.md  COMPARE-DOCKER.md  DASHBOARD.md  DEVICES.md  DOCKER-TESTING.md  EMBEDDED.md  FAQ.md  FEATURES.md  FOR-DOCKER-USERS.md  HEALTH.md  INSTALL.md  LICENSING.md  OWASP-AGENTIC.md  PLATFORMS.md  POD-CONFIG.md  QUICKSTART.md  ROADMAP.md  SCREENING.md  SDK.md  SECURITY-MODEL.md  SECURITY-POSTURE.md  SECURITY.md  SETUP-PATTERNS.md  TESTING.md  THIRD-PARTY-LICENSES.html  THIRD-PARTY-LICENSES.md  TROUBLESHOOTING.md  TUTORIAL-AGENT-AS-A-SERVICE.md  TUTORIAL-AGENT-BUILDS-AND-DEPLOYS.md  TUTORIAL-AGENTIC-SERVICE.md  TUTORIAL-CLAUDE-CODE-GOVERNED.md  TUTORIAL-PAID-API.md  TUTORIALS.md  USER-GUIDE.md  WEB-DISPLAY.md  WHITEPAPER.md
examples/: README.md  aider.yaml  api-server.yaml  basic-cli.yaml  basic-internet.yaml  browser-use.yaml  browser-wayland.yaml  browser.yaml  claude-code-dev-setup.sh  claude-code-dev.yaml  claude-code.yaml  clone-user.yaml  code-interpreter.yaml  codex.yaml  coding-agent.yaml  cron-agent.yaml  cursor.yaml  data-pipeline.yaml  demo-pod.yaml  desktop-app-setup.sh  desktop-openbox.yaml  desktop-sway.yaml  desktop-user.yaml  desktop-web.yaml  desktop.yaml  devbox.yaml  discovery-client.yaml  discovery-service.yaml  docker-in-pod.yaml  experiment-swarm.yaml  full-governance-desktop.yaml  full-governance.yaml  fuse-agent.yaml  gemini-cli.yaml  gimp.yaml  github-repo.yaml  github-swarm.yaml  google-adk.yaml  hardened-sandbox.yaml  host-apps.yaml  (+40 more)
patterns/: screening-rules.json
results/: benchmark-clone.txt  benchmark-core.txt  benchmark-dns.txt  benchmark-gpu.txt  benchmark-podman.txt  benchmark-scale.txt  benchmark-size.txt
sdk/: EXAMPLES.md
sdk/python/: QUICKSTART.md  README.md  pyproject.toml  test_sdk.py
sdk/python/envpod/: __init__.py  installer.py  pod.py  screen.py
sdk/python/envpod.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdk/typescript/: QUICKSTART.md  README.md  package-lock.json  package.json
tests/: benchmark-cleanup.sh  benchmark-clone.sh  benchmark-dns.sh  benchmark-docker.sh  benchmark-gpu.sh  benchmark-podman.sh  benchmark-scale.sh  benchmark-size.sh  benchmark.sh  e2e.sh  test-all-examples.sh  test-distros-v2.sh  test-distros.md
video-demos/: 01-install-first-pod-60s.md  01-install-first-pod-exec.md  02-claude-code-governed.md  03-openclaw-governed.md  04-chrome-wayland-gpu.md  05-dashboard-fleet-control.md  record-demos.sh  record-examples.sh  recording-tips.md
video-demos/recordings/: 01-install-exec.cast  01-install-exec.html  01-install-first-pod-60s-rendered.md  01-install-first-pod-60s.cast  01-install-first-pod-60s.html  01-install-first-pod.cast  01-install.cast  02-claude-code-governed-rendered.md  02-claude-code-governed.cast  02-claude-code-governed.html  02-claude-code.cast  03-openclaw-governed-rendered.md  03-openclaw-governed.cast  03-openclaw-governed.html  03-openclaw.cast  04-chrome-wayland-gpu-rendered.md  04-chrome-wayland-gpu.cast  04-chrome-wayland-gpu.html  04-chrome.cast  05-dashboard-fleet-control-rendered.md  05-dashboard-fleet-control.cast  05-dashboard-fleet-control.html  05-dashboard-fleet-ctrl.cast  (+1 more)
website/: CNAME  cla.html  demos.html  envpod-mobile.css  index.html  index.old.html  install.sh  tutorials.html  update.json  waitlist.html
(+30 files in other folders)
