[package]
name = "envpod-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for envpod — zero trust environments for AI agents"

[dependencies]
anyhow.workspace = true
chacha20poly1305 = "0.10"
chrono.workspace = true
envpod-dns = { path = "../dns" }
libc = "0.2"
rand = "0.8"
nix = { version = "0.29", features = ["mount", "sched", "signal", "process", "fs", "user", "hostname"] }
seccompiler = "0.4"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

# HTTP action executor (client-side only — no TLS server/CA generation)
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
webpki-roots.workspace = true
hyper-rustls.workspace = true

[dev-dependencies]
tempfile = "3"
