[package]
name = "envpod-dns"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Embedded per-pod DNS resolver for envpod"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
hickory-proto.workspace = true
hickory-resolver.workspace = true
socket2.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
