[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "envpod"
version = "0.1.3"
description = "The zero-trust governance layer for AI agents"
readme = "README.md"
license = {text = "BSL-1.1"}
authors = [{name = "Mark Amo-Boateng, PhD", email = "mark@envpod.dev"}]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
keywords = ["ai", "agents", "governance", "security", "sandbox", "isolation"]

[project.urls]
Homepage = "https://envpod.dev"
Repository = "https://github.com/markamo/envpod-ce"
Documentation = "https://github.com/markamo/envpod-ce/tree/main/docs"
Issues = "https://github.com/markamo/envpod-ce/issues"
Discord = "https://discord.gg/envpod"

[tool.setuptools.packages.find]
include = ["envpod*"]
